--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -578,6 +578,10 @@ video {
   margin: 2.5rem;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-8 {
   margin-left: 2rem;
   margin-right: 2rem;
@@ -604,8 +608,8 @@ video {
   min-height: 100vh;
 }
 
-.w-20 {
-  width: 5rem;
+.w-40 {
+  width: 10rem;
 }
 
 .min-w-full {
@@ -616,12 +620,28 @@ video {
   max-width: 1536px;
 }
 
+.border-spacing-10 {
+  --tw-border-spacing-x: 2.5rem;
+  --tw-border-spacing-y: 2.5rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
+.border-spacing-72 {
+  --tw-border-spacing-x: 18rem;
+  --tw-border-spacing-y: 18rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
 .grid-cols-11 {
   grid-template-columns: repeat(11, minmax(0, 1fr));
 }
 
 .flex-row {
   flex-direction: row;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .gap-4 {
@@ -632,38 +652,60 @@ video {
   border-radius: 0.5rem;
 }
 
-.bg-campfire-emerald-default {
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-r-0 {
+  border-right-width: 0px;
+}
+
+.border-r-2 {
+  border-right-width: 2px;
+}
+
+.border-r-8 {
+  border-right-width: 8px;
+}
+
+.border-garden-main {
+  --tw-border-opacity: 1;
+  border-color: rgb(189 200 141 / var(--tw-border-opacity, 1));
+}
+
+.bg-garden-darkshade {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 163 141 / var(--tw-bg-opacity, 1));
+  background-color: rgb(84 115 105 / var(--tw-bg-opacity, 1));
 }
 
-.bg-campfire-lime-light {
+.bg-garden-evendarkershade {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 216 175 / var(--tw-bg-opacity, 1));
+  background-color: rgb(65 81 76 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-}
-
-.from-campfire-emerald-default {
-  --tw-gradient-from: #8ba38d var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(139 163 141 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-campfire-lime-dark {
-  --tw-gradient-from: #aebb8f var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(174 187 143 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-campfire-lime-default {
-  --tw-gradient-to: #bdc499 var(--tw-gradient-to-position);
-}
-
-.to-campfire-lime-light {
-  --tw-gradient-to: #dcd8af var(--tw-gradient-to-position);
+.bg-garden-lightshade {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 246 / var(--tw-bg-opacity, 1));
 }
 
 .p-2 {
@@ -674,6 +716,14 @@ video {
   padding: 1.5rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -682,6 +732,34 @@ video {
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .text-2xl {
@@ -699,13 +777,54 @@ video {
   line-height: 1.75rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .font-medium {
   font-weight: 500;
 }
 
-.text-zinc-100 {
+.font-thin {
+  font-weight: 100;
+}
+
+.font-extralight {
+  font-weight: 200;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.text-garden-darkshade {
   --tw-text-opacity: 1;
-  color: rgb(244 244 245 / var(--tw-text-opacity, 1));
+  color: rgb(84 115 105 / var(--tw-text-opacity, 1));
+}
+
+.text-garden-lightaccent {
+  --tw-text-opacity: 1;
+  color: rgb(202 213 182 / var(--tw-text-opacity, 1));
+}
+
+.text-garden-main {
+  --tw-text-opacity: 1;
+  color: rgb(189 200 141 / var(--tw-text-opacity, 1));
+}
+
+.text-garden-lightshade {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 246 / var(--tw-text-opacity, 1));
+}
+
+.shadow-garden-evendarkershade {
+  --tw-shadow-color: #41514c;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .filter {
@@ -718,31 +837,6 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-body::before,
-body::after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  content: "";
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  opacity: 0.4;
-}
-
-body::before {
-  background: #8c8c8c;
-  filter: url(#noiseFilter);
-}
-
-#root {
-  position: relative;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
 .hover\:underline:hover {
